--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "axios": "^1.6.5",
     "bcryptjs": "^2.4.3",
     "framer-motion": "^10.18.0",
     "joi": "^17.11.0",
