--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DB = "mongodb://127.0.0.1/quiz-e-meter"
-JWT_PRIVATE_KEY = "Quiz-e-meter_2024"
+DB = "mongodb://127.0.0.1/quizify"
+JWT_PRIVATE_KEY = "Quizify_2024"
 SALT = 10
