--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.3"
   },
-  "name": "quiz-e-meter",
+  "name": "quizify",
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
