--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "joi": "^13.7.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.4",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
