--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.4",
     "nodemon": "^3.0.2",
-    "react-query": "^3.39.3"
+    "react-query": "^3.39.3",
+    "zustand": "^4.3.7"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
