Implemented Email Verification with OTP

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "joi": "^13.7.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.4",
+    "nodemailer": "^6.9.11",
     "nodemon": "^3.0.2",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
