--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontends"
   },
   "author": "",
   "license": "ISC",
