--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.6.5",
     "framer-motion": "^10.18.0",
     "joi": "^17.11.0",
+    "quizify": "file:..",
     "react": "^18.2.0",
     "react-cookie": "^7.1.0",
     "react-dom": "^18.2.0",
