--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/node": "^20.11.3"
+    "@types/node": "^20.11.3",
+    "typescript": "^5.4.2"
   },
   "name": "quizify",
   "version": "1.0.0",
