--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.11.0",
     "@tanstack/react-query": "^5.24.1",
     "@tanstack/react-query-devtools": "^5.24.1",
+    "@types/node": "^20.11.30",
     "axios": "^1.6.5",
     "framer-motion": "^10.18.0",
     "joi": "^17.11.0",
@@ -25,7 +26,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.2",
-    "react-toastify": "^10.0.2"
+    "react-toastify": "^10.0.2",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
