--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "quizify",
   "private": true,
   "version": "0.0.0",
+  "proxy": "https://quizify-pt2a.onrender.com",
   "type": "module",
   "scripts": {
     "dev": "vite",
